# SLImage

./: CMakeLists.txt  README.md
example images/: abstract.slmg  gentoo.slmg  gradient.slmg  grid.slmg  guitar.slmg  rainbow.slmg  scenery.slmg
src/: display.c  display.h  editor.c  editor.h  includes.h  main.c  read.c  read.h  types.h  write.c  write.h
